--- a/design.html
+++ b/design.html
@@ -47,7 +47,41 @@
     Switch
   </p>
   <img src="Design/wiring.png" style="width: 200px;">
-  <p class="subtitle">Propeller Designs</p>
+<br id="propeller">
+    <p class="subtitle">Propeller Design</p>
+    <table>
+        <tr>
+            <th>Low Pitch (of blades)</th>
+            <th>High Pitch</th>
+        </tr>
+        <tr>
+            <td>
+                Results in higher rotational speeds but lower forward speed.<br>
+                Increases efficiency at low speeds.<br>
+                Causes inefficiency at high speeds.
+            </td>
+            <td>
+                Results in lower rotational speeds but achieves higher forward speed.<br>
+                Increases efficiency at higher speeds.<br>
+                Reduces acceleration or low-speed thrust, making it harder to accelerate.
+            </td>
+        </tr>
+            </table>
+    <p class="main">
+        The efficiency of a propeller design is based on how much of the engine's power is turned into thrust. While having more blades increases thrust, each blade also increases drag which reduces efficiency. 
+<br><br>
+One way to increase thrust is to extend the length of each blade to make more thrust but keep efficiency high. However, increasing the length of a propeller blade isn’t always possible, because longer blades reduce ground clearance. Increasing the blade length too much can lead to blades hitting the ground or other parts of the vehicle.
+<br><br>
+An optimal propeller design should balance the thrust to drag ratio while maximising the size and efficiency within the available space.
+<br><br>
+The information gathered from this research was instrumental in the design choices of the propellers. The designs sought to find, then further optimize the optimal pitch and blade specifications in order to meet a perfect equilibrium between acceleration and higher rpm performance.
+    </p>
+      <p class="main" style="text-align: center; padding-top: 2px; padding-bottom: 2px;">
+    <a style="font-size: 18px;" href="https://airplaneacademy.com/whats-the-difference-between-2-3-and-4-bladed-propellers/ ‌">https://airplaneacademy.com/whats-the-difference-between-2-3-and-4-bladed-propellers/ ‌
+  </a>
+    </p>
+    <img style="width: 800px;" src="images/propeller-diagram.png" alt="Propeller Diagram">
+
   <p class="main" style="text-align: center;">
 
 
@@ -63,9 +97,9 @@
       <td style="text-align: left; padding-left: 10px;">4 (Propeller 1)</td>
       <td><img src="images/4-rb.png" style="width: 350px;"></td>
       <td style="text-align: left; padding-left: 10px;">This design features:<br>
-        A thick internal blade width<br>
-        A constant angle throughout the blades<br>
-        A rounded end piece.<br><br>
+        - A thick internal blade width<br>
+        - A constant angle throughout the blades<br>
+        - A rounded end piece.<br><br>
         Came first mostly due to its optimal mix of blades, size and angle. This mix allowed the propeller to outperform
         all other blades by a large margin.
       </td>
@@ -74,12 +108,12 @@
     <tr>
       <td style="text-align: left; padding-left: 10px;">4 (Propeller 2)</td>
       <td><img src="images/4-co.png" style="width: 350px;"></td>
-      <td style="text-align: left; padding-left: 10px;">This design features:<br>
-        A tapering blade design<br>
-        Accentuated rounding towards the ends of the blades<br>
-        Extreme angle on the outside of the blade.<br><br>
-        Tied last with 3 (MD) party due to its tendency to blow air upwards and not in the direction required. This
-        could most likely be attributed to the extreme angle of the blades.
+      <td style="text-align: left; padding-left: 10px;">This design features:
+- A tapering blade design<br>
+- Accentuated rounding towards the ends of the blades<br>
+- Extreme angle on the outside of the blade.<br><br>
+Tied last with Propeller 3 party due to its tendency to blow air upwards and not in the direction required. This could most likely be attributed to the extreme angle of the blades.
+
       </td>
       </td>
     </tr>
@@ -87,11 +121,11 @@
       <td style="text-align: left; padding-left: 10px;">3 (Propeller 3)</td>
       <td><img src="images/3-md.png" style="width: 350px;"></td>
       <td style="text-align: left; padding-left: 10px;">This design features:<br>
-        Small blades<br>
-        Small amount of angle on the blades<br>
-        Straight equidistant blades<br><br>
-        Tied last with 4 (CO) and was unable to drive the car. Most likely due to the lesser amount of blades and the
-        shape being too small to catch air at low RPMs.
+- Small blades<br>
+- Small amount of angle on the blades<br>
+- Straight equidistant blades<br><br>
+Tied last with Propeller 2 and was unable to drive the car. Most likely due to the lesser amount of blades and the shape being too small to catch air at low RPMs.
+
       </td>
       </td>
     </tr>
@@ -99,17 +133,16 @@
       <td style="text-align: left; padding-left: 10px;">3 (Propeller 4)</td>
       <td><img src="images/3-pt.png" style="width: 350px;"></td>
       <td style="text-align: left; padding-left: 10px;">This design features:<br>
-        Thick pointed blades with strong angles<br>
-        Thick design<br>
-        <br><br>
-        Performed 2nd best out of all blades, most likely due to its thick blades able to grab and pull air at low
-        rotation speeds.
+- Thick pointed blades with strong angles<br>
+- Thick design<br>
+<br><br>
+Performed second best out of all blades, most likely due to its thick blades able to grab and pull air at low rotation speeds.
+
       </td>
       </td>
     </tr>
 
   </table>
-  <a href="research.html#propeller">Click here to read more about the Propeller Design</a>
   </p>
   <br id="materials">
   <p class="subtitle">Budget and Materials</p>
@@ -119,8 +152,6 @@
       <th style="width: 20%;">Use</th>
       <th style="width: 20%;">Original Use</th>
       <th style="width: 20%;">Image</th>
-      <th style="width: 20%;">Price</th>
-
     </tr>
 
     <tr>
@@ -129,7 +160,6 @@
         and ease of conforming to specifications.</td>
       <td style="text-align: left; padding-left: 10px;">Used as model making foam, offcuts used.</td>
       <td><img src="images/styrofoam.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Free
       </td>
     </tr>
     <tr>
@@ -137,7 +167,6 @@
       <td style="text-align: left; padding-left: 10px;">New Chassis for the car.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/plastic-bottle.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Free
       </td>
     </tr>
     <tr>
@@ -146,7 +175,6 @@
         also be used to hold parts together when they require to be taken off regularly.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/rubber-band.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Free
       </td>
     </tr>
     <tr>
@@ -154,7 +182,6 @@
       <td style="text-align: left; padding-left: 10px;">Used as the wheelbase for their size and texture.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/lid.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Free
       </td>
     </tr>
     <tr>
@@ -163,7 +190,6 @@
         its shape.</td>
       <td style="text-align: left; padding-left: 10px;">Aluminium Drink Can</td>
       <td><img src="images/aluminium-can-sheet.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Free
       </td>
     </tr>
     <tr>
@@ -171,7 +197,6 @@
       <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/dowel.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Supplied
       </td>
     </tr>
     <tr>
@@ -179,7 +204,6 @@
       <td style="text-align: left; padding-left: 10px;">Used to power the propeller.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/motor.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $3.50
       </td>
     </tr>
     <tr>
@@ -187,7 +211,6 @@
       <td style="text-align: left; padding-left: 10px;">Used to hold the batteries.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/battery-pack.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $2.00
       </td>
     </tr>
     <tr>
@@ -196,7 +219,6 @@
         state.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/switch.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $10.00
       </td>
     </tr>
     <tr>
@@ -205,13 +227,104 @@
       </td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/wires.png" style="width: 280px;"></td>
-      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $1.50
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">AA Batteries</td>
       <td style="text-align: left; padding-left: 10px;">Used to power the components.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
+      <td><img src="images/battery-pack.png" style="width: 280px;"></td>
+      </td>
+    </tr>
+  </table>
+  <br><br>
+  <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+    <tr>
+      <th style="width: 20%;">Name</th>
+      <th style="width: 20%;">Use</th>
+      <th style="width: 20%;">Image</th>
+      <th style="width: 20%;">Price</th>
+
+    </tr>
+
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">High Desnity Styrofoam (from packages)</td>
+      <td style="text-align: left; padding-left: 10px;">Chassis and base material for the car. Used for its lightweight
+        and ease of conforming to specifications.</td>
+      <td><img src="images/styrofoam.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Free
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Plastic Bottle (Lipton Ice Tea)</td>
+      <td style="text-align: left; padding-left: 10px;">New Chassis for the car.</td>
+      <td><img src="images/plastic-bottle.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Free
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Rubber Band (from Vegetable or Sushi packaging)</td>
+      <td style="text-align: left; padding-left: 10px;">Used to create better grip from the wheels and the path. Will
+        also be used to hold parts together when they require to be taken off regularly.</td>
+      <td><img src="images/rubber-band.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Free
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Bottle Caps (milk carton or bottle)</td>
+      <td style="text-align: left; padding-left: 10px;">Used as the wheelbase for their size and texture.</td>
+      <td><img src="images/lid.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Free
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Sheet from Aluminium Can</td>
+      <td style="text-align: left; padding-left: 10px;">Used as the propeller due to its lightness and ability to hold
+        its shape.</td>
+      <td><img src="images/aluminium-can-sheet.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Free
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Wooden Dowel/Skewers</td>
+      <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin.</td>
+      <td><img src="images/dowel.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $0.50
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Motor</td>
+      <td style="text-align: left; padding-left: 10px;">Used to power the propeller.</td>
+      <td><img src="images/motor.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $3.50
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Battery Pack</td>
+      <td style="text-align: left; padding-left: 10px;">Used to hold the batteries.</td>
+      <td><img src="images/battery-pack.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $2.00
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Switch</td>
+      <td style="text-align: left; padding-left: 10px;">Used to toggle the circuit between the powered and unpowered
+        state.</td>
+      <td><img src="images/switch.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $10.00
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">Wires</td>
+      <td style="text-align: left; padding-left: 10px;">Used to send current and power between the components motor.
+      </td>
+      <td><img src="images/wires.png" style="width: 280px;"></td>
+      <td style="text-align: left; padding-left: 10px;">Supplied: Approx $1.50
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: left; padding-left: 10px;">AA Batteries</td>
+      <td style="text-align: left; padding-left: 10px;">Used to power the components.</td>
       <td><img src="images/battery-pack.png" style="width: 280px;"></td>
       <td style="text-align: left; padding-left: 10px;">Supplied: Approx $5.00
       </td>
@@ -295,18 +408,18 @@
     <tr>
       <td><img src="images/aluminium-can-sheet.png" style="width: 320px;"></td>
       <td style="text-align: left; padding-left: 10px;">
-      Step 13: Cut a metal can into one large sheet.
-Step 14: Cut these sheets into 3x5 strips. x4
-Step 15: Bend the sheets sideways
+      Step 13: Cut a metal can into one large sheet.<br>
+Step 14: Cut these sheets into 3x5 strips. x4<br>
+Step 15: Bend the sheets sideways<br>
 </td>
     </tr>
     <tr>
       <td><img src="images/4-rb.png" style="width: 320px;"></td>
       <td style="text-align: left; padding-left: 10px;">
-Step 16: Hot glue all 4 blades equidistant from each other.
-Step 17: Hammer a hole into the center of the propeller.
-Step 18: Attach the propeller
-Step 19: The Propeller Dragster is Complete
+Step 16: Hot glue all 4 blades equidistant from each other.<br>
+Step 17: Hammer a hole into the center of the propeller.<br>
+Step 18: Attach the propeller<br>
+Step 19: The Propeller Dragster is Complete<br>
     </tr>
   </table>
 
