--- a/overview.html
+++ b/overview.html
@@ -49,7 +49,8 @@
 
         </label>
     <p class="subtitle">Gantt Chart</p>
-    <p class="main" style="    background-color: transparent !important;">
+    <img style="width: 380px;" src="images/gantt.png">
+    <p class="main" style="    background-color: transparent !important; margin-top: -40px;">
         <a target="_blank"
             href="https://docs.google.com/spreadsheets/d/1LPLCaoHC56INkIJ_I7hm5YNAg27AWWYt/edit?usp=sharing&ouid=109511729124599648716&rtpof=true&sd=true">Click
             here to view the Gantt Chart</a>
