--- a/bibliography.html
+++ b/bibliography.html
@@ -1,12 +1,6 @@
 <head>
     <link rel="stylesheet" href="ui.css">
     <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
-    <style>
-        
-p.main {
-  text-align: left;
-}
-    </style>
 </head>
 <body>
     <div class="navbar">
@@ -15,19 +9,18 @@ p.main {
     </div>
     <div style="padding-top: calc(8vh);"></div>
     <p class="main">
-
-        Homemade Hax. (2022, October 8). How to make propeller - Using soda can | DIY propeller for drone | Homemade DC motor propeller. YouTube. https://www.youtube.com/watch?v=BOofC9vnUk0
-<br>        <br>
-
-        Kramer, T. (n.d.). What’s the Difference Between 2, 3, and 4-Bladed Propellers? AirplaneAcademy.com. https://airplaneacademy.com/whats-the-difference-between-2-3-and-4-bladed-propellers/
-        ‌<br>        <br>
-
-        Bobrov, E. (2017, November 9). White house floor plan with interior details on construction blueprint scheme, seamless pattern stock illustration. iStock. https://www.istockphoto.com/vector/white-house-floor-plan-with-interior-details-on-construction-blueprint-scheme-gm862277766-241390119
-        <br>        <br>
-
-        Waldron, G. (2025, March 11). AVIC tests two new eVTOL aircraft. Flight Global. https://www.flightglobal.com/aerospace/avic-tests-two-new-evtol-aircraft/162144.article
-            
-    https://www.safetysure.com.au/what-types-of-safety-signs-do-i-need-for-my-warehouse/
+AUSTRALIA’S FIRST BATCH OF HYDROGEN FUEL BUSES. (2022). Fotonmotor.com. https://fotonmotor.com/electromobility/australia-first-hydrogen-fuel-bus.html<br>
+<br>Cryospain. (2024, October 27). How do hydrogen aircraft work? Cryospain. https://cryospain.com/hydrogen-aircraft<br>
+<br>FCHEA. (2024, October 28). Fuel Cell Basics - FCHEA. FCHEA. https://fchea.org/learning-center/fuel-cell-basics/<br>
+<br>Homemade Hax. (2022, October 8). How to make propeller - Using soda can | DIY propeller for drone | Homemade DC motor propeller. YouTube. https://www.youtube.com/watch?v=BOofC9vnUk0<br>
+<br>Kramer, T. (n.d.). What’s the Difference Between 2, 3, and 4-Bladed Propellers? AirplaneAcademy.com. https://airplaneacademy.com/whats-the-difference-between-2-3-and-4-bladed-propellers/<br>
+<br>Lehman, C., & Selin, N. E. (2018). biofuel. In Encyclopædia Britannica. https://www.britannica.com/technology/biofuel<br>
+<br>Mittermeier, F. (2018, April 20). Blue Universe · Free Stock Photo. Pexels. https://www.pexels.com/photo/blue-universe-956981/<br>
+<br>Solid state batteries. (n.d.). Battery Research & Innovation Hub. https://batteryhub.deakin.edu.au/battery-storage/solid-state-batteries/<br>
+<br>Solid State Battery - an overview | ScienceDirect Topics. (2017). Sciencedirect.com. https://www.sciencedirect.com/topics/materials-science/solid-state-battery<br>
+<br>Staff, E. (2024, October 16). Daimler Buses cooperates with H2 Mobility for the expansion of hydrogen tank infrastructure in Germany. Sustainable Bus. https://www.sustainable-bus.com/infrastructure/daimler-buses-h2-mobility-hydrogen-tank-infrastructure/<br>
+<br>U.S. Department of Energy. (2024). Fuel Cells. Energy.gov; Hydrogen and Fuel Cell Technologies Office. https://www.energy.gov/eere/fuelcells/fuel-cells<br>
+<br>Waldron, G. (2025, March 11). AVIC tests two new eVTOL aircraft. Flight Global. https://www.flightglobal.com/aerospace/avic-tests-two-new-evtol-aircraft/162144.article<br>
     </p>
 
     <script src="navbar.js"></script>
