--- a/design.html
+++ b/design.html
@@ -156,45 +156,42 @@ Performed second best out of all blades, most likely due to its thick blades abl
 
     <tr>
       <td style="text-align: left; padding-left: 10px;">High Desnity Styrofoam (from packages)</td>
-      <td style="text-align: left; padding-left: 10px;">Chassis and base material for the car. Used for its lightweight
-        and ease of conforming to specifications.</td>
+      <td style="text-align: left; padding-left: 10px;">Used due to its low weight and its ability to remain extremely stable.</td>
       <td style="text-align: left; padding-left: 10px;">Used as model making foam, offcuts used.</td>
       <td><img src="images/styrofoam.png" style="width: 280px;"></td>
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">Plastic Bottle (Lipton Ice Tea)</td>
-      <td style="text-align: left; padding-left: 10px;">New Chassis for the car.</td>
+      <td style="text-align: left; padding-left: 10px;">Used as chassis/main body panel for the 2nd car, securely holding everything in place.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/plastic-bottle.png" style="width: 280px;"></td>
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">Rubber Band (from Vegetable or Sushi packaging)</td>
-      <td style="text-align: left; padding-left: 10px;">Used to create better grip from the wheels and the path. Will
-        also be used to hold parts together when they require to be taken off regularly.</td>
+      <td style="text-align: left; padding-left: 10px;">Used as a grip for the wheels.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/rubber-band.png" style="width: 280px;"></td>
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">Bottle Caps (milk carton or bottle)</td>
-      <td style="text-align: left; padding-left: 10px;">Used as the wheelbase for their size and texture.</td>
+      <td style="text-align: left; padding-left: 10px;">Used as the wheels due to its round and uniform shape. Also has inbuilt grooves leading to better grip.</td>
       <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
       <td><img src="images/lid.png" style="width: 280px;"></td>
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">Sheet from Aluminium Can</td>
-      <td style="text-align: left; padding-left: 10px;">Used as the propeller due to its lightness and ability to hold
-        its shape.</td>
+      <td style="text-align: left; padding-left: 10px;">Used as the propeller due to its lightness and ability to hold its shape.</td>
       <td style="text-align: left; padding-left: 10px;">Aluminium Drink Can</td>
       <td><img src="images/aluminium-can-sheet.png" style="width: 280px;"></td>
       </td>
     </tr>
     <tr>
       <td style="text-align: left; padding-left: 10px;">Wooden Dowel/Skewers</td>
-      <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin.</td>
+      <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin and strong when under all forms of force other than torque.</td>
       <td style="text-align: left; padding-left: 10px;">N/A</td>
       <td><img src="images/dowel.png" style="width: 280px;"></td>
       </td>
