--- a/results.html
+++ b/results.html
@@ -61,7 +61,16 @@ Step 8: Repeat from step 4 after making a modification to the design. (including
   </tr>
 
 </table>
+
+
+
 <br>
+
+<p class="subtitle">Trial Photos</p>
+<p class="main">
+  <img style="width: 800px;" src="images/trial-photo-1.png">
+</p>
+
   <table style="width: 80%;">
   <tr>
     <th>Propeller 1</th>
@@ -114,7 +123,7 @@ Step 8: Repeat from step 4 after making a modification to the design. (including
     <td>21-25</td>
     <td>Angle of propeller 4 changed and weight was reduced. Rubber bands were also added to support wheel traction.</td>
     <td>0</td>
-    <td>Improvements to the car allowed the dragster to move faster and with less of a noticeable turn but was unable to beat trials 1 through 5. The dragster to complete the course.</td>
+    <td>Due to the rubber band creating more resistance on the wheels and the angle being too sharp the car was unable to start.</td>
   </tr>
 </table>
 <br>
@@ -312,7 +321,7 @@ The car built met all requirements dimension wise as the dragsters propeller sta
     </p>
   <p class="subtitle">Areas for Future Improvement</p>
     <p class="main">
-The dragster while being able to complete the required distance in a moderate time did not meet the majority of expectations, let alone exceed them. The version of the dragster was unable to run and was riddled with flaws, the second design while working in practice was clunky and did not meet expectations. In the future if this was to be done again firstly the car would be composed of a lighter more workable material such as balsa wood or a fibrous composite material such as carbon fibre or fibreglass. This would lessen weight while making cuts more precise allowing for a car that can not only move faster but also move smoother. Another change that could be implemented is the optimisation of propellers. The results gathered from the tests inferred that more blades at angles of approximately 20°- 50° improved performance. A more uniform angle stretching from tip to tip instead of increasing as the blade stretched upwards could also theoretically improve performance. Overall the car performed well but not perfectly, future iterations would seek to improve and fix issues by applying a range of material and design changes.
+The dragster while being able to complete the required distance in a moderate time did not meet the majority of expectations, let alone exceed them. The first version of the dragster was unable to run and was riddled with flaws such as poor weight distribution and sizing, the second design while working in practice was clunky and did not meet expectations. In the future if this was to be done again firstly the car would be composed of a lighter more workable material such as balsa wood or a fibrous composite material such as carbon fibre or fibreglass. This would lessen weight while making cuts more precise allowing for a car that can not only move faster but also move smoother. Another change that could be implemented is the optimisation of propellers. The results gathered from the tests inferred that more blades at angles of approximately 20°- 50° improved performance. A more uniform angle stretching from tip to tip instead of increasing as the blade stretched upwards could also theoretically improve performance. Overall the car performed well but not perfectly, future iterations would seek to improve and fix issues by applying a range of material and design changes.
 
     </p>
 
