--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
 
     <p class="subtitle">ASSESSMENT TASK 1 - Propeller Dragster</p>
-    <p class="subtitle" style="font-size: 120%;">By Ames, Wutti and Cisco
+    <p class="subtitle" style="font-size: 120%;">By Ames, Wutthi and Cisco
         <br>Teacher: Ms Bean
     </p>        
     <p class="subtitle">Task Overview</p>
